tests/invalid/runtime/string_pad_start_empty_pad.pts
import Io;

function main() : void {
    string s = "x";
    Io.printLine(s.padStart(3, ""));
}
